; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_uvc_configfs.c_uvcg_config_create_group.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_uvc_configfs.c_uvcg_config_create_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_group = type { i32 }
%struct.uvcg_config_group_type = type { i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_group*, %struct.uvcg_config_group_type*)* @uvcg_config_create_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uvcg_config_create_group(%struct.config_group* %0, %struct.uvcg_config_group_type* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.config_group*, align 8
  %5 = alloca %struct.uvcg_config_group_type*, align 8
  %6 = alloca %struct.config_group*, align 8
  store %struct.config_group* %0, %struct.config_group** %4, align 8
  store %struct.uvcg_config_group_type* %1, %struct.uvcg_config_group_type** %5, align 8
  %7 = load i32, i32* @GFP_KERNEL, align 4
  %8 = call %struct.config_group* @kzalloc(i32 4, i32 %7)
  store %struct.config_group* %8, %struct.config_group** %6, align 8
  %9 = load %struct.config_group*, %struct.config_group** %6, align 8
  %10 = icmp ne %struct.config_group* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @ENOMEM, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %28

14:                                               ; preds = %2
  %15 = load %struct.config_group*, %struct.config_group** %6, align 8
  %16 = load %struct.uvcg_config_group_type*, %struct.uvcg_config_group_type** %5, align 8
  %17 = getelementptr inbounds %struct.uvcg_config_group_type, %struct.uvcg_config_group_type* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.uvcg_config_group_type*, %struct.uvcg_config_group_type** %5, align 8
  %20 = getelementptr inbounds %struct.uvcg_config_group_type, %struct.uvcg_config_group_type* %19, i32 0, i32 0
  %21 = call i32 @config_group_init_type_name(%struct.config_group* %15, i32 %18, i32* %20)
  %22 = load %struct.config_group*, %struct.config_group** %6, align 8
  %23 = load %struct.config_group*, %struct.config_group** %4, align 8
  %24 = call i32 @configfs_add_default_group(%struct.config_group* %22, %struct.config_group* %23)
  %25 = load %struct.config_group*, %struct.config_group** %6, align 8
  %26 = load %struct.uvcg_config_group_type*, %struct.uvcg_config_group_type** %5, align 8
  %27 = call i32 @uvcg_config_create_children(%struct.config_group* %25, %struct.uvcg_config_group_type* %26)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %14, %11
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct.config_group* @kzalloc(i32, i32) #1

declare dso_local i32 @config_group_init_type_name(%struct.config_group*, i32, i32*) #1

declare dso_local i32 @configfs_add_default_group(%struct.config_group*, %struct.config_group*) #1

declare dso_local i32 @uvcg_config_create_children(%struct.config_group*, %struct.uvcg_config_group_type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
